Fix inflation section
The text was overlapping with the image icons

--- a/nyt-article/styles.css
+++ b/nyt-article/styles.css
@@ -188,7 +188,7 @@ h1{
 
 #grid-inflation{
     display: grid;
-    grid-template: repeat(4, 1fr) / repeat(4, 1fr);
+    grid-template: repeat(2, 9fr 11fr) / repeat(4, 1fr);
 }
 
 .grid-title{
